# local_activities_platform

./: README.md  SUMMARY.md
api_local_activities/: .env  .env.example  README.md  Taskfile.yml  pyproject.toml  requirements.txt
api_local_activities/app/: config.py  db.py  helpers.py  main.py  models.py  schemas.py  seed.py
api_local_activities/app/routes/: __init__.py  activities.py  ratings.py  users.py
local_activities_platform_frontend/: index.html  package-lock.json  package.json
local_activities_platform_frontend/src/: App.tsx
local_activities_platform_frontend/src/application/hooks/: useAppController.ts  useLocalActivities.ts
local_activities_platform_frontend/src/components/: ActivityDetailPresenter.tsx  ActivityFormPresenter.tsx  ActivityListPresenter.tsx  RatingFormPresenter.tsx  UserRegistrationPresenter.tsx
local_activities_platform_frontend/src/controllers/: AppController.tsx
local_activities_platform_frontend/src/domain/: models.ts
local_activities_platform_frontend/src/infrastructure/http/: apiClient.ts
local_activities_platform_frontend/src/infrastructure/services/: activityService.ts  ratingService.ts  userService.ts
local_activities_platform_frontend/src/ui/pages/: ActivityDetailPage.tsx  HomePage.tsx  RegistrationPage.tsx
local_activities_platform_frontend/src/ui/shared/: Layout.tsx  Navbar.tsx  StatusBanner.tsx
