[project]
name = "api-local-activities"
version = "0.1.0"
description = "Backend para la plataforma de actividades locales"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=2.0.1",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "motor>=3.7.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.32.0",
]
